--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,7 +29,7 @@ const currentYear = new Date().getFullYear();
           <a href="/projects" class="text-base text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-400">
             Projects
           </a>
-          <a href="/blog" class="text-base text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-400">
+          <a href="/blog" target="_blank" rel="noopener noreferrer" class="text-base text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-400">
             Blog
           </a>
           <a href="/open-source" class="text-base text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-400">
