--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -61,5 +61,10 @@ const {
 		  ? <FloatingContactButton /> 
 		  : <FloatingFAQButton />
 		}
+		
+		<!-- Page Path Debug -->
+		<script>
+			console.log('Current path:', window.location.pathname);
+		</script>
 	</body>
 </html>
