--- a/src/components/FloatingContactButton.astro
+++ b/src/components/FloatingContactButton.astro
@@ -5,11 +5,11 @@
 <a 
   href="/contact" 
   id="floatingContact" 
-  class="fixed bottom-32 right-6 bg-indigo-600 hover:bg-indigo-700 text-white p-3 rounded-full shadow-lg transition-all duration-300 ease-in-out transform scale-0 opacity-0 z-50"
+  class="fixed bottom-[88px] right-6 bg-indigo-600 hover:bg-indigo-700 text-white p-3 rounded-full shadow-lg transition-all duration-300 ease-in-out transform scale-0 opacity-0 z-[110]"
   aria-label="Contact Me"
   title="Contact Me"
 >
-  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
   </svg>
 </a>
@@ -22,7 +22,7 @@
 
     // Show button after scrolling
     function toggleFloatingContact() {
-      if (window.pageYOffset > 500) {
+      if (window.pageYOffset > 300) {
         floatingContactButton?.classList.remove('scale-0', 'opacity-0');
         floatingContactButton?.classList.add('scale-100', 'opacity-100');
       } else {
